*   0.07 many cahnges including  *   	- fixed error on display when doing a move 99999  *   	- added velocity and position PID modes  *   	- fixed LCD menu and put LCD code in own file  *   	- include LCD source files from adafruit as that ssd1306 need lcd resoultion fix  *   	- added motor parameters to NVM such step size and rotation are only check on first boot  *   	- added test on power up to see if motor power is applied.  *   	- added factory reset command  *   	- pPID is not stable in my testing.

--- a/firmware/stepper_nano_zero/.cproject
+++ b/firmware/stepper_nano_zero/.cproject
@@ -89,8 +89,6 @@
 					</folderInfo>
 					<sourceEntries>
 						<entry excluding="Adafruit-GFX-Library-master|Adafruit_SSD1306-master" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Adafruit-GFX-Library-master"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Adafruit_SSD1306-master"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -111,4 +109,5 @@
 		</scannerConfigBuildInfo>
 	</storageModule>
 	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
