--- a/firmware/stepper_nano_zero/.project
+++ b/firmware/stepper_nano_zero/.project
@@ -26,14 +26,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>Adafruit-GFX-Library-master</name>
+			<name>arduino</name>
 			<type>2</type>
-			<location>C:/Users/tstern/Documents/Arduino/libraries/Adafruit-GFX-Library-master</location>
-		</link>
-		<link>
-			<name>Adafruit_SSD1306-master</name>
-			<type>2</type>
-			<location>C:/Users/tstern/Documents/Arduino/libraries/Adafruit_SSD1306-master</location>
+			<location>C:/Users/tramp_000/AppData/Local/Arduino15/packages/arduino/hardware/samd/1.6.8/cores/arduino</location>
 		</link>
 	</linkedResources>
 </projectDescription>
