--- a/firmware/stepper_nano_zero/.cproject
+++ b/firmware/stepper_nano_zero/.cproject
@@ -35,6 +35,7 @@
 									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\misfittech\hardware\samd\1.0.0\cores\arduino&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\arduino\tools\CMSIS\4.0.0-atmel\Device\ATMEL&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Users\TSTERN\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.6.6\libraries\SPI&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\arduino\tools\CMSIS\4.0.0-atmel\CMSIS\include&quot;"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.77778103" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="ARDUINO_SAMD_ZERO"/>
@@ -54,6 +55,7 @@
 									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\arduino\tools\CMSIS\4.0.0-atmel\Device\ATMEL\samd21\include\component&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\arduino\tools\CMSIS\4.0.0-atmel\Device\ATMEL&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Users\TSTERN\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.6.6\libraries\SPI&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\arduino\tools\CMSIS\4.0.0-atmel\CMSIS\include&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.215333140" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__SAMD21G18A__"/>
@@ -82,6 +84,7 @@
 									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\misfittech\hardware\samd\1.0.0\cores\arduino&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\arduino\tools\CMSIS\4.0.0-atmel\Device\ATMEL&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Users\TSTERN\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.6.6\libraries\SPI&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\tstern\AppData\Local\Arduino15\packages\arduino\tools\CMSIS\4.0.0-atmel\CMSIS\Include&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.474088881" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
